--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,12 +1,12 @@
 pipeline{
 agent {label 'GOL,'}
 stages {
-stgae('scm'){
+stage('scm'){
 steps {
 git branch: 'master', url:'https://github.com/kotidba4/game-of-life.git'
   }
 }
-satge('build'){
+stage('build'){
 steps {
 sh 'mvn package'
  }
