--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,21 +1,27 @@
-pipeline{
-agent {label 'GOL,'}
-stages {
-stage('scm'){
-steps {
-git branch: 'master', url:'https://github.com/kotidba4/game-of-life.git'
-  }
-}
-stage('build'){
-steps {
-sh 'mvn package'
- }
-}
-}
-post {
-success {
-   artifacts '**/*.war'
-    junit '**/TEST-*.xml'
-}
-}
+pipeline {
+    agent { label 'GOL'}
+    triggers {
+        cron('H * * * *')
+        pollSCM('* * * * *')
+    }
+    stages {
+        stage('scm') {
+            steps {
+
+                git branch: 'master', url: 'https://github.com/asquarezone/game-of-life.git'
+            }
+        }
+        stage('build') {
+            steps {
+                sh 'mvn package'
+            }
+        }
+    }
+    post {
+        success {
+            archive '**/gameoflife.war'
+            junit '**/TEST-*.xml'
+        }
+        
+    }
 }
