--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,6 +9,7 @@ pipeline {
             steps {
 
                 git branch: "${params.BRANCH}", url: 'https://github.com/asquarezone/game-of-life.git'
+                //input message: 'Continue to next stage? ', submitter: 'qtaws,qtazure'
             }
         }
         stage('build') {
