--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,6 +25,7 @@ pipeline {
         }
         stage('build') {
             steps {
+                echo env.GIT_URL
                 sh 'mvn package'  
             }
         }
